--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dev": "tsx src/index.ts",
     "scan": "tsx src/index.ts --scan",
     "auth": "tsx src/index.ts --auth",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "tsc --noEmit",
     "prepublishOnly": "npm run build"
   },
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "tsx": "^4.19.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "vitest": "^4.0.18"
   }
 }
